<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/ll_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_app"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/app_name_text_size"
            android:text="@string/app_name"/>
    </LinearLayout>

    <TextView
        android:id="@+id/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/content_margin_top"
        android:layout_below="@+id/ll_icon"
        android:layout_alignLeft="@+id/ll_icon"
        android:text="@string/version"/>

    <TextView
        android:id="@+id/author_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/content_margin_top"
        android:layout_below="@+id/app_version"
        android:layout_alignLeft="@+id/ll_icon"
        android:text="@string/mail"/>

    <TextView
        android:id="@+id/author_wechat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/content_margin_top"
        android:layout_below="@+id/author_mail"
        android:layout_alignLeft="@+id/ll_icon"
        android:text="@string/wechat"/>

</RelativeLayout>
