<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:id="@+id/option_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingLeft="@dimen/option_bar_padding_h"
        android:paddingRight="@dimen/option_bar_padding_h"
        android:paddingTop="@dimen/option_bar_padding_v"
        android:paddingBottom="@dimen/option_bar_padding_v"
        android:gravity="center_vertical"
        android:layout_alignParentBottom="true">
        <CheckBox
            android:id="@+id/all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textColor="@android:color/white"
            android:onClick="onClick"
            android:text="@string/select_all"/>
        <CheckBox
            android:id="@+id/none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:onClick="onClick"
            android:text="@string/select_none"/>
        <CheckBox
            android:id="@+id/reverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@android:color/white"
            android:onClick="onClick"
            android:text="@string/select_reverse"/>
    </RelativeLayout>

    <ListView
        android:id="@+id/lv_package"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/option_bar"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:dividerHeight="0.5sp"/>

</RelativeLayout>
