<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:id="@+id/ll_swipe_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:padding="@dimen/margin_left"
        android:background="@color/colorTip"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_swipe_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_tip"/>

        <CheckBox
            android:id="@+id/cb_konw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/tip_text_size"
            android:text="@string/kown_it"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/iv_swipe_tip"
            android:layout_toLeftOf="@+id/cb_konw"
            android:layout_marginLeft="@dimen/content_margin_top"
            android:textSize="@dimen/tip_text_size"
            android:textColor="@android:color/black"
            android:text="@string/tip_swipe"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_no_noti_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:padding="@dimen/margin_left"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/content_margin_top"
            android:textSize="@dimen/tip_text_size"
            android:text="@string/no_noti_tip_1"/>
    </LinearLayout>

    <ListView
        android:id="@+id/lv_noti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_swipe_tip"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:dividerHeight="0.5sp"/>

</RelativeLayout>
